Fix bug where bottom of county text cut off in Windows
[#166851607]

--- a/app/components/DOJFileInput.css
+++ b/app/components/DOJFileInput.css
@@ -6,6 +6,6 @@
   color: #5f5854;
 }
 
-.no-bottom-margin {
+.noBottomMargin {
   margin-bottom: 0;
 }
